[metadata]
name = csharpier
version = 0.2.0
description = Run CSharpier directly or through Docker.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gpsgate/csharpier
author = Emmanuel Frecon
author_email = efrecon+github@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
exclude =
    hooks*

[options.entry_points]
console_scripts =
    csharpier = pre_commit_hooks.csharpier:main
